# sysprog

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  init_eclipse.sh  testCode.code
Alternative/Automat/: makefile
Alternative/Automat/includes/: Automat.h
Alternative/Automat/src/: Automat.cpp  TestAutomat.cpp
Alternative/Buffer/: makefile
Alternative/Buffer/src/: Buffer.cpp
Alternative/Scanner/: makefile
Alternative/Scanner/src/: Scanner.cpp
Alternative/Symboltable/: makefile
Alternative/Symboltable/includes/: Information.h  Item.h  Keyword.h  Symboltable.h  TestSymbolTable.h  Token.h  Type.h
Alternative/Symboltable/src/: Information.cpp  Symboltable.cpp  Token.cpp
Documentation/: .gitignore  Abbildungsverzeichnis.tex  Dokumentation.tex  Inhaltsverzeichnis.tex  Literaturverzeichnis.tex  Makefile  Parser.tex  Quellcodeverzeichnis.tex  Scanner.tex  Titelseite.tex  sources.bib
Documentation/Code/: CodeGenerator1.cpp  CodeGenerator2.cpp  CodeGenerator4.cpp  decl.cpp
Documentation/src/: Makefile  intro.tex  teil1.tex  teil2.tex
src/: CMakeLists.txt  main.cpp
src/Scanner/: Makefile  main.cpp
src/Scanner/Automat/: Makefile  automat.cpp  automat.h  automatTest.cpp
src/Scanner/Buffer/: Buffer.cpp  Buffer.h  Makefile  buffer.cpp  buffer.h  main.cpp  test.txt  testProgramm.txt
src/Scanner/Scanner/: Makefile  scanner.cpp  scanner.h
src/Scanner/Token/: Makefile
src/SymbolType/: symboltype.h
src/Symtab/Container/: container.h  testContainer.cpp
src/Token/: Makefile  testToken.cpp  token.cpp  token.h
src/lib/googletest-master/googletest/scripts/: pump.py
src/lib/googletest-master/googletest/test/: gtest-listener_test.cc
src/lib/googletest-master/googletest/xcode/Config/: FrameworkTarget.xcconfig  General.xcconfig  StaticLibraryTarget.xcconfig
src/main/: colors.h  main.cpp
src/main/Parser/: runParser.cpp
src/main/Parser/Exceptions/: CodeGenerationException.h  GrammarException.h
src/main/Parser/Parser/: CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  Grammar.cpp  Grammar.h  Leaf.cpp  Leaf.h  Node.cpp  Node.h  NodeType.h  Nodes.cpp  Nodes.h  ParseTree.cpp  ParseTree.h  Parser.cpp  Parser.h  Rule.cpp  Rule.h  RuleType.h  Rules.cpp  Rules.h  SemanticAnalyser.cpp  SemanticAnalyser.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  TypeChecker.cpp  TypeChecker.h
src/main/Parser/Stack/: Stack.cpp  Stack.h
src/main/Position/: Position.cpp  Position.h
src/main/Scanner/: Makefile  runScanner.cpp
src/main/Scanner/Automat/: Automat.cpp  Automat.h  State.h  automat.h
src/main/Scanner/Buffer/: Buffer.cpp  Buffer.h  Makefile
src/main/Scanner/Position/: Position.cpp
src/main/Scanner/Scanner/: Makefile  Scanner.cpp  Scanner.h  scanner.cpp  scanner.h
src/main/Scanner/SymbolTable/: Information.cpp  Information.h  SymbolItem.h  SymbolTable.cpp  SymbolTable.h
src/main/Scanner/SymbolTable/StringTable/: StringTable.cpp
src/main/Scanner/SymbolType/: Symboltype.h
src/main/Scanner/Token/: ElseToken.cpp  ElseToken.h  ErrorToken.cpp  ErrorToken.h  IdentifierToken.cpp  IdentifierToken.h  IfToken.cpp  IfToken.h  IntToken.cpp  IntToken.h  IntegerToken.h  ReadToken.cpp  ReadToken.h  Token.cpp  Token.h  WhileToken.cpp  WhileToken.h  WriteToken.cpp  WriteToken.h
src/main/String/: StringOp.cpp  StringOp.h
src/main/SymbolTable/: Information.cpp  Information.h  Keyword.h  Keywords.h  SymbolItem.h  SymbolTable.cpp  SymbolTable.h
src/main/SymbolTable/StringTable/: StringTable.cpp  StringTable.h
src/main/SymbolType/: Symboltype.h  symboltype.h
src/main/Symtab/: Information.cpp  Information.h  StringTable.cpp  StringTable.h  SymbolItem.h  Symboltable.cpp  Symboltable.h
src/main/Symtab/Container/: Makefile  container.cpp
src/main/Token/: ErrorToken.cpp  ErrorToken.h  IdentifierToken.cpp  IdentifierToken.h  IfToken.cpp  IfToken.h  IntegerToken.cpp  IntegerToken.h  Token.cpp  Token.h  WhileToken.cpp  WhileToken.h  token.cpp  token.h
src/test/: automatTest.cpp  bufferTest.cpp  main.cpp  newTokenTypeTest.cpp  nodeTest.cpp  parseTreeTest.cpp  parserTest.cpp  scannerErrorTest.cpp  scannerTest.cpp  stringTableTest.cpp  symtableTest.cpp  tokenTest.cpp
src/test/parserTest/: p1Test.txt  p2Test.txt  p3Test.txt  p4Test.txt  p5Test.txt  p6Test.txt  p7Test.txt  p7aTest.txt  p7bTest.txt  p8Test.txt
src/test/scannerTest/: scanner1.txt  scanner2.txt  scanner4.txt  scanner7.txt  scanner8.txt
src/test/testData/: Comment.txt  Comment2.txt  ErroneousSpecial.txt  Errors.txt  NewTokenTypeTest1.txt  Programm.txt  ReallyLongIdentifier.txt  SimpleMultiline.txt  SpecialChars.txt  SpecialCharsSpaces.txt  StartWithSpaces.txt  bible.min.txt  testCloseArithmeticExp.txt  testComment.txt  testCommentWith2Spaces.txt  testCommentWithMultipleSpaces.txt  testCommentWithSpace.txt  testDifferentSpaces.txt  testIdentifierLonger.txt  testLongFileDifferentSymbols.txt  testLongInteger.txt  testParenthesis.txt  testProgramm.txt
src/test/testData/programs/: Assign.txt  simplestAddition.txt
test/: automatTest.cpp  exampleTest.cpp  scannerTest.cpp  tokenTest.cpp
